run prettier
