# server/openapi.yaml
@@ -37,33 +37,33 @@ paths:
                 items:
                   $ref: "#/components/schemas/Message"
 /auth/access_token:
-    post:
-    tags: [Auth]
-    summary: exchange a Slack OAuth authorization code for a JWT
-    requestBody:
-      description: Payload that includes the OAuth Authorization Code from Slack
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              code:
-                type: string
-    responses:
-      200:
-        description: success! JWT in response
+  post:
+  tags: [Auth]
+  summary: exchange a Slack OAuth authorization code for a JWT
+  requestBody:
+    description: Payload that includes the OAuth Authorization Code from Slack
+    content:
+      application/json:
+        schema:
+          type: object
+          properties:
+            code:
+              type: string
+  responses:
+    200:
+      description: success! JWT in response
 components:
   schemas:
     Channel:
       type: object
       properties:
-        _id: 
+        _id:
           type: string
           example: edveevere2323dc3
         slackId:
           type: string
           example: C035Z8YT7
-        name: 
+        name:
           type: string
           example: general
         topic:
@@ -82,12 +82,12 @@ components:
     Message:
       type: object
       properties:
-        _id: 
+        _id:
           type: string
           example: a55dd3e2-1b1c-4ee8-a05e-9a35dda5710a
         ts:
           $ref: "#/components/schemas/__Timestamp"
-        type: 
+        type:
           type: string
           example: thread
         channelName:
@@ -104,10 +104,10 @@ components:
           items:
             type: object
             properties:
-              _id: 
+              _id:
                 type: string
                 example: a55dd3e2-1b1c-4ee8-a05e-9a35dda5710a
-              slackId: 
+              slackId:
                 type: string
                 example: FJ0UW704
               displayName:
@@ -124,7 +124,7 @@ components:
           type: array
           items:
             properties:
-              _id: 
+              _id:
                 type: string
                 example: a55dd3e2-1b1c-4ee8-a05e-9a35dda5710b
               createdBy:
@@ -136,7 +136,7 @@ components:
               type:
                 type: string
                 example: reply
-              channelName: 
+              channelName:
                 type: string
                 example: general
               channelId:
@@ -147,10 +147,10 @@ components:
                 items:
                   type: object
                   properties:
-                    _id: 
+                    _id:
                       type: string
                       example: a55dd3e2-1b1c-4ee8-a05e-9a35dda5710a
-                    slackId: 
+                    slackId:
                       type: string
                       example: FJ0UW704
                     displayName:
@@ -168,10 +168,10 @@ components:
     User:
       type: object
       properties:
-        _id: 
+        _id:
           type: string
           example: a55dd3e2-1b1c-4ee8-a05e-9a35dda5710a
-        slackId: 
+        slackId:
           type: string
           example: U07AT4FB4
         profilePhoto:
